[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.91"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
diesel = { version = "1.4.5", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.11.0"
