[package]
name = "invest-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.91"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
diesel = { version = "2.2.2", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "uuid",
] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.11.0"
clap = { version = "4.5.11", features = ["derive"] }
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
actix = "0.13.5"
jsonwebtoken = "9.3.0"
actix-web-httpauth = "0.8.2"
dashmap = "6.0.1"
